# rust-divtracker-api

./: .gitignore  Cargo.toml  README.md  data.db
migrations/: 20230504130547_users.sql
src/: main.rs
src/api/: mod.rs  ubi.rs  wrapper.rs
src/db/: mod.rs  user.rs
src/middleware/: catcher.rs  governor.rs  mod.rs
src/model/: div.rs  div1.rs  mod.rs  response.rs  ubi.rs
src/util/: header.rs  message.rs  mod.rs  webdriver.rs
